--- a/GBriceCorp/src/main/webapp/static/views/Cons_DemCli.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cons_DemCli.html
@@ -31,22 +31,19 @@
 							<tr>
 								<th ng-click="ctrl.trier_par('Nom')">Nom</th>
 								<th ng-click="ctrl.trier_par('Prenom')">Prenom</th>
-								<th ng-click="ctrl.trier_par('Adresse')">Adresse</th>
-								<th ng-click="ctrl.trier_par('Type')">Type</th>
+								<th ng-click="ctrl.trier_par('Ressource')">Ressource</th>
 								<th width="10%" ng-click="ctrl.trier_par('Action')">Action</th>
 
 							</tr>
 						</thead>
 						<tbody>
 							<tr ng-repeat="demande in dmdctrl.demandes  | filter:search:strict | orderBy:tripar ">
-								<td>{{demande.clientID}}</td>
-								<td>{{demande.idCompte}}</td>
-								<td>{{demande.type}}</td>
-								<td>{{demande.etat}}</td>
-
+								<td>{{demande.nom}}</td>
+								<td>{{demande.prenom}}</td>
+								<td>{{demande.revenu}}</td>
 								<td align=center>
-<img class="icone_liste" src="static/imgs/crayon.png" ng-hide="{{demande.Edition}}" ng-click="" />
-		<img class="icone_liste" src="static/imgs/sablier.png" ng-hide="{{demande.Attente}}" ng-click="" />
+<img class="icone_liste" src="static/imgs/crayon.png" ng-hide="{{demande.etat}}=='EnCours'" ng-click="" />
+		<img class="icone_liste" src="static/imgs/sablier.png" ng-hide="{{demande.etat}}=='EnAttente'" ng-click="" />
 								</td>
 							</tr>
 						</tbody>
