--- a/GBriceCorp/src/main/webapp/static/views/Admin_EditCons.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_EditCons.html
@@ -3,7 +3,7 @@
 
 	<!-- Default panel contents -->
 	<div class="panel-heading">
-		<span class="lead">Edition de conseiller</span>
+		<span class="lead">Edition de conseiller  {{conseiller}}</span>
 	</div>
 
 	<!-- action="envoiMailConfirmation.php"-->
@@ -18,7 +18,7 @@
 						<div class="col-md-7">
 							<input type="text" ng-model="ctrl.cons.prenom" name="prenom"
 								class="form-control input-sm"
-								placeholder="Entrez la correction du prenom" />
+								value="'user.prenom'" />
 						</div>
 					</div>
 				</div>
@@ -28,7 +28,7 @@
 						<div class="col-md-7">
 							<input type="text" ng-model="ctrl.cons.nom" name="nom"
 								class="form-control input-sm"
-								placeholder="Entrez la correction du nom" />
+								value="user.nom" />
 						</div>
 					</div>
 				</div>
@@ -38,7 +38,7 @@
 						<div class="col-md-7">
 							<input type="tel" ng-model="ctrl.cons.telephone" name="telephone"
 								class="form-control input-sm"
-								placeholder="Entez le nouveau numero de telephone" />
+								value="'user.telephone" />
 						</div>
 					</div>
 				</div>
@@ -49,7 +49,7 @@
 						<div class="col-md-7">
 							<input type="email" ng-model="ctrl.cons.mail" name="mail"
 								class="form-control input-sm"
-								placeholder="Entrez le nouvel email" />
+								value={{conseiller.email}} />
 						</div>
 					</div>
 				</div>
@@ -62,7 +62,7 @@
 						<div class="col-md-7">
 							<input type="text" ng-model="ctrl.cons.adresse" name="adresse"
 								class="form-control input-sm"
-								placeholder="Entrez la nouvelle adresse" />
+								value="Entrez la nouvelle adresse" />
 						</div>
 					</div>
 				</div>
@@ -73,7 +73,7 @@
 						<div class="col-md-7">
 							<input type="text" ng-model="ctrl.cons.codepostal"
 								name="codepostal" class="form-control input-sm"
-								placeholder="Entrez le nouveau codepostal" />
+								value="Entrez le nouveau codepostal" />
 						</div>
 					</div>
 				</div>
@@ -84,7 +84,7 @@
 						<div class="col-md-7">
 							<input type="text" ng-model="ctrl.cons.dateDebContrat"
 								name="dateDebContrat" class="form-control input-sm"
-								placeholder="ATTENTION: NECESSITE L'AVAL VOTRE DIRECTEUR D'AGENCE!" />
+								value="ATTENTION: NECESSITE L'AVAL VOTRE DIRECTEUR D'AGENCE!" />
 						</div>
 					</div>
 				</div>
@@ -95,7 +95,7 @@
 						<div class="col-md-7">
 							<input type="text" ng-model="ctrl.cons.dateFinContrat"
 								name="dateFinContrat" class="form-control input-sm"
-								placeholder="ATTENTION: NECESSITE L'AVAL VOTRE DIRECTEUR D'AGENCE!" />
+								value="ATTENTION: NECESSITE L'AVAL VOTRE DIRECTEUR D'AGENCE!" />
 						</div>
 					</div>
 				</div>
