--- a/GBriceCorp/src/main/webapp/static/views/Guest_Inscription.html
+++ b/GBriceCorp/src/main/webapp/static/views/Guest_Inscription.html
@@ -1,125 +1,171 @@
 
 
 
-	<!-- Formulaire d'inscription -->
+<!-- Formulaire d'inscription -->
 
 
 
-	<div class="panel panel-info" ng-controller="DemandeController as dmdctrl">
+<div class="panel panel-info"
+	ng-controller="DemandeController as dmdctrl">
 
-		<!-- Default panel contents -->
-		<div class="panel-heading" >
-			<span class="lead">Demande d'ouverture d'un compte courant</span>
-		</div>
+	<!-- Default panel contents -->
+	<div class="panel-heading">
+		<span class="lead">Demande d'ouverture d'un compte courant</span>
+	</div>
 
-		<!-- action="envoiMailConfirmation.php"-->
-		<div class="panel-body" >
-			<div class="formcontainer">
-				<form ng-submit="dmdctrl.inscription_Client()" name="formIscription"
-					class="form-horizontal" method="post">
+	<!-- action="envoiMailConfirmation.php"-->
+	<div class="panel-body">
+		<div class="formcontainer">
+			<form ng-submit="dmdctrl.inscription_Client()" name="formIscription"
+				class="form-horizontal" method="post">
+				<div class="row">
+					<div class="form-actions ">
+						<a href="#/" class="btn btn-warning btn-sm floatLeft"> Retour
+						</a> <input type="submit" value="Valider"
+							class="btn btn-primary btn-sm floatRight"
+							ng-disabled="formConnexion.$invalid">
+					</div>
+				</div>
 
-						
-					<div class="row">
-						<div class="form-group col-md-12">
-							<label class="col-md-2 control-lable" for="file">Prenom</label>
-							<div class="col-md-7">
-								<input type="text" ng-model="dmdctrl.client.prenom" name="prenom"
-									class="form-control input-sm" placeholder="Entez votre prenom"
-									required />
-								<div class="has-error" ng-show="formInscription.$dirty">
-									<span ng-show="formConnexion.prenom.$error.required">Champ
-										obligatoire</span>
-								</div>
+				<div class="row">
+					<div class="form-group col-md-12">
+						<label class="col-md-2 control-lable" for="file">Prenom</label>
+						<div class="col-md-7">
+							<input type="text" ng-model="dmdctrl.client.prenom" name="prenom"
+								class="form-control input-sm" placeholder="Entez votre prenom"
+								required />
+							<div class="has-error" ng-show="formInscription.$dirty">
+								<span ng-show="formConnexion.prenom.$error.required">Champ
+									obligatoire</span>
 							</div>
 						</div>
 					</div>
-					<div class="row">
-						<div class="form-group col-md-12">
-							<label class="col-md-2 control-lable" for="file">Nom</label>
-							<div class="col-md-7">
-								<input type="text" ng-model="dmdctrl.client.nom" name="nom"
-									class="form-control input-sm" placeholder="Entrez votre prenom"
-									required />
-								<div class="has-error" ng-show="formInscription.$dirty">
-									<span ng-show="formConnexion.nom.$error.required">Champ
-										obligatoire</span>
-								</div>
+				</div>
+				<div class="row">
+					<div class="form-group col-md-12">
+						<label class="col-md-2 control-lable" for="file">Nom</label>
+						<div class="col-md-7">
+							<input type="text" ng-model="dmdctrl.client.nom" name="nom"
+								class="form-control input-sm" placeholder="Entrez votre prenom"
+								required />
+							<div class="has-error" ng-show="formInscription.$dirty">
+								<span ng-show="formConnexion.nom.$error.required">Champ
+									obligatoire</span>
 							</div>
 						</div>
 					</div>
-					<div class="row">
-						<div class="form-group col-md-12">
-							<label class="col-md-2 control-lable" for="file">Telephone</label>
-							<div class="col-md-7">
-								<input type="tel" ng-model="dmdctrl.client.telephone"
-									name="telephone" class="form-control input-sm"
-									placeholder="Entez votre telephone" required />
-								<div class="has-error" ng-show="formInscription.$dirty">
-									<span ng-show="formConnexion.telephone.$error.required">Champ
-										obligatoire</span>
-								</div>
+				</div>
+				<div class="row">
+					<div class="form-group col-md-12">
+						<label class="col-md-2 control-lable" for="file">Telephone</label>
+						<div class="col-md-7">
+							<input type="tel" ng-model="dmdctrl.client.telephone"
+								name="telephone" class="form-control input-sm"
+								placeholder="Entez votre telephone" required />
+							<div class="has-error" ng-show="formInscription.$dirty">
+								<span ng-show="formConnexion.telephone.$error.required">Champ
+									obligatoire</span>
 							</div>
 						</div>
 					</div>
-					<div class="row">
-						<div class="form-group col-md-12">
-							<label class="col-md-2 control-lable" for="file">Adresse
-								mail</label>
-							<div class="col-md-7">
-								<input type="email" ng-model="dmdctrl.client.mail" name="mail"
-									class="form-control input-sm" placeholder="Entrez votre email"
-									required />
-								<div class="has-error" ng-show="formInscription.$dirty">
-									<span ng-show="formConnexion.email.$error.required">Champ
-										obligatoire</span>
-								</div>
+				</div>
+				<div class="row">
+					<div class="form-group col-md-12">
+						<label class="col-md-2 control-lable" for="file">Adresse
+							mail</label>
+						<div class="col-md-7">
+							<input type="email" ng-model="dmdctrl.client.mail" name="mail"
+								class="form-control input-sm" placeholder="Entrez votre email"
+								required />
+							<div class="has-error" ng-show="formInscription.$dirty">
+								<span ng-show="formConnexion.email.$error.required">Champ
+									obligatoire</span>
 							</div>
 						</div>
 					</div>
+				</div>
 
 
-					<div class="row">
-						<div class="form-group col-md-12">
-							<label class="col-md-2 control-lable" for="file">Adresse
-								postale</label>
-							<div class="col-md-7">
-								<input type="text" ng-model="dmdctrl.client.adresse" name="adresse"
-									class="form-control input-sm"
-									placeholder="Entrez votre adresse" required />
-								<div class="has-error" ng-show="formInscription.$dirty">
-									<span ng-show="formConnexion.adresse.$error.required">Champ
-										obligatoire</span>
-								</div>
+				<div class="row">
+					<div class="form-group col-md-12">
+						<label class="col-md-2 control-lable" for="file">Adresse
+							postale</label>
+						<div class="col-md-7">
+							<input type="text" ng-model="dmdctrl.client.adresse"
+								name="adresse" class="form-control input-sm"
+								placeholder="Entrez votre adresse" required />
+							<div class="has-error" ng-show="formInscription.$dirty">
+								<span ng-show="formConnexion.adresse.$error.required">Champ
+									obligatoire</span>
 							</div>
 						</div>
 					</div>
-					<div class="row">
-						<div class="form-group col-md-12">
-							<label class="col-md-2 control-lable" for="file">Code
-								Postal</label>
-							<div class="col-md-7">
-								<input type="text" ng-model="dmdctrl.client.revenus"
-									name="codepostal" class="form-control input-sm"
-									placeholder="Entez votre revenu moyen estime" required />
-								<div class="has-error" ng-show="formInscription.$dirty">
-									<span ng-show="formConnexion.codepostal.$error.required">Champ
-										obligatoire</span>
-								</div>
+				</div>
+				<div class="row">
+					<div class="form-group col-md-12">
+						<label class="col-md-2 control-lable" for="file">Revenus
+							brut mensuel estime</label>
+						<div class="col-md-7">
+							<input type="text" ng-model="dmdctrl.client.revenus"
+								name="codepostal" class="form-control input-sm"
+								placeholder="Entez votre revenu moyen estime" required />
+							<div class="has-error" ng-show="formInscription.$dirty">
+								<span ng-show="formConnexion.codepostal.$error.required">Champ
+									obligatoire</span>
 							</div>
 						</div>
 					</div>
+				</div>
 
 
-					<div class="row">
+
+			</form>
+
+			<form action="UploadServlet" method="post"
+				enctype="multipart/form-data">
+				<div class="row">
+					<div class="form-group col-md-12">
+						<label class="col-md-2 control-lable" for="file">Justificatif
+							de domicile</label>
+
+
+						<div class="col-md-7">
+							<input type="file" name="file" class="form-control input-sm"
+								size="50" /> <br />
+						</div>
 						<div class="form-actions ">
-							<a href="#/" class="btn btn-warning btn-sm floatLeft"> Retour
-							</a> <input type="submit" value="Valider"
-								class="btn btn-primary btn-sm floatRight"
-								ng-disabled="formConnexion.$invalid">
+							<input type="submit" class="btn btn-primary btn-sm floatLeft"
+								value="Upload File" />
 						</div>
 					</div>
-				</form>
-			</div>
+
+				</div>
+
+
+			</form>
+			<form action="UploadServlet" method="post"
+				enctype="multipart/form-data">
+				<div class="row">
+					<div class="form-group col-md-12">
+						<label class="col-md-2 control-lable" for="file">Derniere
+							fiche de paie</label>
+
+
+						<div class="col-md-7">
+							<input type="file" name="file" class="form-control input-sm"
+								size="50" /> <br />
+						</div>
+						<div class="form-actions ">
+							<input type="submit" class="btn btn-primary btn-sm floatLeft"
+								value="Upload File" />
+						</div>
+					</div>
+
+				</div>
+
+
+			</form>
 		</div>
 	</div>
+</div>
 
