Persistance Demandes et quelques petites modifs

--- a/GBriceCorp/src/main/webapp/static/views/Admin_RechCons.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_RechCons.html
@@ -45,9 +45,9 @@
 								 /> </a>
 							</td>
 							<td>
-								<!--<a href="#/admin/Admin_DelCons?{{Conseiller.id}}"> --> <img
+								<a href="#/admin/Admin_DelCons?{{Conseiller.id}}"> <img
 								class="icone_liste" src="static/imgs/delete.png"
-								ng-click="redir_delete_cons()" /> </a>
+								/> </a>
 							</td>
 						</tr>
 					</tbody>
