--- a/GBriceCorp/src/main/webapp/static/views/Admin_CreaCons.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_CreaCons.html
@@ -1,50 +1,50 @@
 
 <!-- Formulaire de creation de conseiller -->
 
-<div class="panel panel-info " >
+<div class="panel panel-info ">
 
 	<!-- Default panel contents -->
-	<div class="panel-heading" >
+	<div class="panel-heading">
 		<span class="lead">Creation d'un nouveau conseiller</span>
 	</div>
 
 
-	<div class="panel-body" >
-		<div class="formcontainer">
+	<div class="panel-body">
+		<div class="formcontainer col-md-12">
 			<form ng-submit="ctrl.creaCons()" name="formIscription"
 				class="form-horizontal">
-				<input type="hidden" ng-model="ctrl.cons.id" />
-				<input type="hidden" ng-model="ctrl.cons.TypeUser" value="2"/>				
+				<input type="hidden" ng-model="ctrl.cons.id" /> <input
+					type="hidden" ng-model="ctrl.cons.TypeUser" value="2" />
 
-					<div class="form-group col-md-12">
-						<label class="col-md-2 control-lable" for="file">Prenom</label>
-						<div class="col-md-7">
-							<input type="text" ng-model="ctrl.cons.prenom" name="prenom"
-								class="form-control input-sm"
-								placeholder="Entez votre prenom" required />
-							<div class="has-error" ng-show="formInscription.$dirty">
-								<span ng-show="formConnexion.prenom.$error.required">Champ
-									obligatoire</span>
-							</div>
+				<div class="form-group col-md-12">
+					<label class="col-md-5 control-lable text-right" for="file">Prenom</label>
+					<div class="col-md-7">
+						<input type="text" ng-model="ctrl.cons.prenom" name="prenom"
+							class="form-control input-sm" placeholder="Entez votre prenom"
+							required />
+						<div class="has-error" ng-show="formInscription.$dirty">
+							<span ng-show="formConnexion.prenom.$error.required">Champ
+								obligatoire</span>
 						</div>
 					</div>
+				</div>
 
-					<div class="form-group col-md-12">
-						<label class="col-md-2 control-lable" for="file">Nom</label>
-						<div class="col-md-7">
-							<input type="text" ng-model="ctrl.cons.nom"
-								name="nom" class="form-control input-sm"
-								placeholder="Entrez votre prenom" required />
-							<div class="has-error" ng-show="formInscription.$dirty">
-								<span ng-show="formConnexion.nom.$error.required">Champ
-									obligatoire</span>
-							</div>
+				<div class="form-group col-md-12">
+					<label class="col-md-5 control-lable text-right" for="file">Nom</label>
+					<div class="col-md-7">
+						<input type="text" ng-model="ctrl.cons.nom" name="nom"
+							class="form-control input-sm" placeholder="Entrez votre prenom"
+							required />
+						<div class="has-error" ng-show="formInscription.$dirty">
+							<span ng-show="formConnexion.nom.$error.required">Champ
+								obligatoire</span>
 						</div>
+					</div>
 
 				</div>
 				<div class="row">
 					<div class="form-group col-md-12">
-						<label class="col-md-2 control-lable" for="file">Telephone</label>
+						<label class="col-md-5 control-lable text-right" for="file">Telephone</label>
 						<div class="col-md-7">
 							<input type="tel" ng-model="ctrl.cons.telephone" name="telephone"
 								class="form-control input-sm"
@@ -58,11 +58,12 @@
 				</div>
 				<div class="row">
 					<div class="form-group col-md-12">
-						<label class="col-md-2 control-lable" for="file">Adresse mail</label>
+						<label class="col-md-5 control-lable text-right" for="file">Adresse
+							mail</label>
 						<div class="col-md-7">
-							<input type="email" ng-model="ctrl.cons.mail"
-								name="mail" class="form-control input-sm"
-								placeholder="Entrez votre email" required />
+							<input type="email" ng-model="ctrl.cons.mail" name="mail"
+								class="form-control input-sm" placeholder="Entrez votre email"
+								required />
 							<div class="has-error" ng-show="formInscription.$dirty">
 								<span ng-show="formConnexion.email.$error.required">Champ
 									obligatoire</span>
@@ -70,15 +71,16 @@
 						</div>
 					</div>
 				</div>
-				
-				
-				
 
+
+
+				<div class="row">
 					<div class="form-group col-md-12">
-						<label class="col-md-2 control-lable" for="file">Confirmez votre mail</label>
+						<label class="col-md-5 control-lable text-right" for="file">Confirmez
+							votre mail</label>
 						<div class="col-md-7">
-							<input type="email" ng-model="ctrl.cons.conf_mail" name="conf_mail"
-								class="form-control input-sm"
+							<input type="email" ng-model="ctrl.cons.conf_mail"
+								name="conf_mail" class="form-control input-sm"
 								placeholder="confirmation" required />
 							<div class="has-error" ng-show="formInscription.$dirty">
 								<span ng-show="formConnexion.conf_mail.$error.required">Champ
@@ -86,41 +88,38 @@
 							</div>
 						</div>
 					</div>
+				</div>
 
+
+
+				<div class="row">
 
 					<div class="form-group col-md-12">
-						<label class="col-md-2 control-lable" for="file">Adresse postale</label>
+						<label class="col-md-5 control-lable text-right" for="file">Adresse
+							postale</label>
 						<div class="col-md-7">
-							<input type="text" ng-model="ctrl.cons.adresse"
-								name="adresse" class="form-control input-sm"
-								placeholder="Entrez votre adresse" required />
+							<input type="text" ng-model="ctrl.cons.adresse" name="adresse"
+								class="form-control input-sm" placeholder="Entrez votre adresse"
+								required />
 							<div class="has-error" ng-show="formInscription.$dirty">
 								<span ng-show="formConnexion.adresse.$error.required">Champ
 									obligatoire</span>
 							</div>
 						</div>
 					</div>
+				</div>
 
 
-					<div class="form-group col-md-12">
-						<label class="col-md-2 control-lable" for="file">Code Postal</label>
-						<div class="col-md-7">
-							<input type="text" ng-model="ctrl.cons.codepostal" name="codepostal"
-								class="form-control input-sm"
-								placeholder="Entez votre codepostal" required />
-							<div class="has-error" ng-show="formInscription.$dirty">
-								<span ng-show="formConnexion.codepostal.$error.required">Champ
-									obligatoire</span>
-							</div>
-						</div>
-					</div>
+
+				<div class="row">
+
 
 					<div class="form-actions floatRight">
 						<input type="submit" value="Ajouter"
 							class="btn btn-primary btn-sm"
 							ng-disabled="formConnexion.$invalid">
 					</div>
-				
+				</div>
 			</form>
 		</div>
 	</div>
