--- a/GBriceCorp/src/main/webapp/static/views/ConsClient_DetailCompte.html
+++ b/GBriceCorp/src/main/webapp/static/views/ConsClient_DetailCompte.html
@@ -1,6 +1,6 @@
 
 
-<div class="div_view">
+<div class="div_view" ng-controller="DemandeController as dmdctrl" ng-init="dmdctrl.fetchAllDemandes('creation');">
 		<div class=" panel panel-default  ">
 
 			<div class="panel-heading ">
