--- a/GBriceCorp/src/main/webapp/static/views/Cons_DemCli.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cons_DemCli.html
@@ -3,7 +3,7 @@
 
 
 
-<div class="panel panel-info" ng-controller="DemandeController as dmdctrl" ng-init="dmdctrl.fetchAllDemandes('creation');">
+<div class="panel panel-info" ng-controller="DemandeController as dmdctrl" ng-init="dmdctrl.findDemandeById();">
 
 	<!-- Default panel contents -->
 	<div class="panel-heading" >
@@ -37,7 +37,7 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr ng-repeat="demande in dmdctrl.demandes  | filter:search:strict | orderBy:tripar " ng-click="ctrl.detailDemande((demande[1]!=null)?demande[1].id:demande[0].id)" >
+							<tr ng-repeat="demande in dmdctrl.demandes  | filter:search:strict | orderBy:tripar " ng-click="dmdctrl.detailDemande(demande_type,(demande[1]!=null)?demande[1].id:demande[0].id)" >
 								<td>{{(demande[1]!=null)?demande[1].nom:demande[0].nom}}</td>
 								<td>{{(demande[1]!=null)?demande[1].prenom:demande[0].prenom}}</td>
 								<td>{{(demande[1]!=null)?demande[1].dateCreation:demande[0].dateCreation}}</td>
