--- a/GBriceCorp/src/main/webapp/static/views/Cli_DemDecouvert.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_DemDecouvert.html
@@ -1,7 +1,7 @@
 <!-- A creer : demande de découvert
 	données en entrée : user.ID, compte.ID, montant du découvert
  -->
-
+<div ng-init= "ctrl.getInfosClient(ctrl.compte.clientID)"></div>
 
 	<form ng-submit="writeDemDecou()">
 		<div class="panel panel-info" layout="colomn">
@@ -9,8 +9,9 @@
 			Quel decouvert souhaiteriez vous avoir? (attention ce montant ne peut
 			pas exceder 40% de vos revenus mensuels) <input type="text"
 				ng-model="ctrl.user.decouvert" name="demDecouvert"
-				class="username form-control input-sm"
-				placeholder="Saisir la valeur souhaitee" required />
+				class="form-control input-sm" type="number"
+				placeholder="Saisir la valeur souhaitee" required check-revenu
+				 />
 			<div class="row">
 				<div class="form-actions floatRight">
 					<input type="submit" value="Soumettre ma demande Ã  mon conseiller"
