--- a/GBriceCorp/src/main/webapp/static/views/Admin_AffectCli.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_AffectCli.html
@@ -1,7 +1,7 @@
 
 
 
-	<div class="panel panel-info " ng-controller="DemandeController as dmdctrl" ng-init="dmdctrl.fetchAllDemandes('admin');">
+	<div class="panel panel-info " >
 
 		<!-- Default panel contents -->
 		<div class="panel-heading" >
@@ -13,12 +13,12 @@
 
 
 
-		<div class="panel-body" ng-init="ctrl.getListeCons()">
+		<div class="panel-body" >
 			<div class="tablecontainer">
 				<table class="table table-hover" >
 					<thead>
 						<tr>
-							<th ng-click="ctrl.trier_par('Nom')">Nom</th>
+							<th ng-click="ctrl.trier_par('Nom')">Nom </th>
 							<th ng-click="ctrl.trier_par('Prenom')">Prenom</th>
 							<th ng-click="ctrl.trier_par('Adresse')">Adresse</th>
 							<th ng-click="ctrl.trier_par('Email')">Email</th>
@@ -28,20 +28,20 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="demande in dmdctrl.demandes | filter:search:strict | orderBy:tripar ">
-							<td>{{(demande[1]!=null)?demande[1].nom:demande[0].nom}}</td>
-							<td>{{(demande[1]!=null)?demande[1].prenom:demande[0].prenom}}</td>
-							<td>{{(demande[1]!=null)?demande[1].adresse:demande[0].adresse}}</td>
-							<td>{{(demande[1]!=null)?demande[1].mail:demande[0].mail}}</td>
-							<td>{{(demande[1]!=null)?demande[1].revenu:demande[0].revenu}}</td>
+						<tr ng-repeat="demande in ctrl.curentUser.demandeCreationClient | filter:search:strict | orderBy:tripar ">
+							<td>{{demande.nom}}</td>
+							<td>{{demande.prenom}}</td>
+							<td>{{demande.adresse}}</td>
+							<td>{{demande.mail}}</td>
+							<td>{{demande.revenu}}</td>
 							<td>
 										<div>
 									<form name="formValidation" class="form-horizontal">
 										<select class="form-control" id="sel1"
 											ng-change="dmdctrl.validation_attribution({{demande[0].id}},value)" ng-model="value">
 											<option value="">Select</option>
-											<option ng-repeat="conseiller in cons_admin" 
-												value="{{conseiller.id}}">{{conseiller.nom}}</option>
+											<option ng-repeat="Conseiller in ctrl.curentUser.conseillers" 
+												value="{{Conseiller.id}}">{{Conseiller.nom}}</option>
 										</select>
 									</form>
 										</div>
