--- a/GBriceCorp/src/main/webapp/static/views/Guest_Inscription.html
+++ b/GBriceCorp/src/main/webapp/static/views/Guest_Inscription.html
@@ -130,8 +130,7 @@
 
 			</form>
 
-			<form action="UploadServlet" method="post"
-				enctype="multipart/form-data">
+	
 				<div class="row">
 					<div class="form-group col-md-12">
 						<label class="col-md-2 control-lable" for="file">Justificatif
@@ -139,8 +138,8 @@
 
 
 						<div class="col-md-7">
-							<input type="file" name="file" class="form-control input-sm"
-								size="50" /> <br />
+							<input type="file" ng-model="myFile" name="file" class="form-control input-sm"
+								size="50" /> <br /><button ng-click="dmdctrl.uploadFile()">upload me</button>
 						</div>
 						<div class="form-actions ">
 							<input type="submit" class="btn btn-primary btn-sm floatLeft"
@@ -151,7 +150,6 @@
 				</div>
 
 
-			</form>
 			<form action="UploadServlet" method="post"
 				enctype="multipart/form-data">
 				<div class="row">
