--- a/GBriceCorp/src/main/webapp/static/views/Cli_ModifInfos.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_ModifInfos.html
@@ -18,7 +18,7 @@
 					<input type="hidden" ng-model="ctrl.user.id" />
 					<div class="row">
 						<div class="form-group col-md-12">
-							<label class="col-md-2 control-lable" for="file">Prenom</label>
+							<label class="col-md-2 control-label" for="file">Prenom</label>
 							<div class="col-md-7">
 								<input type="text" ng-model="ctrl.user.prenom" name="prenom"
 									class="form-control input-sm" placeholder="Entez votre prenom"
@@ -32,7 +32,7 @@
 					</div>
 					<div class="row">
 						<div class="form-group col-md-12">
-							<label class="col-md-2 control-lable" for="file">Nom</label>
+							<label class="col-md-2 control-label" for="file">Nom</label>
 							<div class="col-md-7">
 								<input type="text" ng-model="ctrl.user.nom" name="nom"
 									class="form-control input-sm" placeholder="Entrez votre prenom"
@@ -46,7 +46,7 @@
 					</div>
 					<div class="row">
 						<div class="form-group col-md-12">
-							<label class="col-md-2 control-lable" for="file">Telephone</label>
+							<label class="col-md-2 control-label" for="file">Telephone</label>
 							<div class="col-md-7">
 								<input type="tel" ng-model="ctrl.user.telephone"
 									name="telephone" class="form-control input-sm"
@@ -60,7 +60,7 @@
 					</div>
 					<div class="row">
 						<div class="form-group col-md-12">
-							<label class="col-md-2 control-lable" for="file">Adresse
+							<label class="col-md-2 control-label" for="file">Adresse
 								mail</label>
 							<div class="col-md-7">
 								<input type="email" ng-model="ctrl.user.email" name="email"
@@ -79,7 +79,7 @@
 
 					<div class="row">
 						<div class="form-group col-md-12">
-							<label class="col-md-2 control-lable" for="file">Confirmez
+							<label class="col-md-2 control-label" for="file">Confirmez
 								votre mail</label>
 							<div class="col-md-7">
 								<input type="email" ng-model="ctrl.checkmail" name="conf_mail"
@@ -94,7 +94,7 @@
 					</div>
 					<div class="row">
 						<div class="form-group col-md-12">
-							<label class="col-md-2 control-lable" for="file">Adresse
+							<label class="col-md-2 control-label" for="file">Adresse
 								postale</label>
 							<div class="col-md-7">
 								<input type="text" ng-model="ctrl.user.adresse" name="adresse"
