--- a/GBriceCorp/src/main/webapp/static/views/Cli_ListeComptes.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_ListeComptes.html
@@ -1,10 +1,10 @@
 
 
-	<div class="panel panel-info" ng-init="getComptes()">
+	<div class="panel panel-info" ng_controller="CompteController as cptCtrl" ng-init="cptCtrl.getComptes()">
 
 			<!-- Default panel contents -->
 			<div class="panel-heading" >
-				<span class="lead">Liste des Comptes </span>
+				<span class="lead">Liste des Comptes <button ng-click="cptCtrl.goToNouveauCompte()" class="floatRight">Nouveau Compte</button></span>
 				
 			</div>
 
