finalisation demande de nouveau compte

--- a/GBriceCorp/src/main/webapp/static/views/Cli_ListeComptes.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_ListeComptes.html
@@ -7,7 +7,7 @@
 				<span class="lead">Liste des Comptes <button ng-click="cptCtrl.goToNouveauCompte()" class="floatRight">Nouveau Compte</button></span>
 				
 			</div>
-
+			<div>ici : {{comptes}}</div>
 
 			<div class="panel-body" >
 				<div class="tablecontainer">
